# celerite2

./: CMakeLists.txt  noxfile.py  pyproject.toml
.github/workflows/: python.yml
python/celerite2/jax/: celerite2.py  ops.py  xla_ops.cpp
python/celerite2/pymc/: ops.py
python/celerite2/pymc3/: ops.py
python/spec/: generate.py
python/spec/templates/jax/: xla_ops.cpp
